--- a/style.css
+++ b/style.css
@@ -74,6 +74,38 @@ section {
     align-items: center;
     margin-top: 50px;
     margin-bottom: 50px;
+    width: 100%;
+}
+
+/* section > iframe {
+    width: 100%;
+} */
+
+.cards {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 5px;
+    width: 80%;
+}
+
+.card {
+    background-color: #88c9f9;
+    border: 4px solid #5c913b;
+    margin:5px;
+    height: 300px;
+    width: 300px;
+}
+
+.card > .card-title {
+    background-color: #5c913b;
+    width: 100%;
+    height: calc(100% / 4);
+    color: white;
+    padding: 15px;
+    text-align: center;
+    font-weight: 900;
+    font-size: 2rem;
 }
 
 .page-button {
@@ -107,6 +139,10 @@ section {
 
     .content {
         margin-top: 75px;
+    }
+
+    .card {
+        margin-top: 50px;
     }
   }
   
