--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
     width: 100%;
 }
@@ -80,6 +80,22 @@ section {
 /* section > iframe {
     width: 100%;
 } */
+
+/* #why-travel {
+    height: 90vh;
+    justify-content: center;
+} */
+
+h2 {
+    font-size: 2.5rem;
+    padding: 15px;
+    margin-bottom: 25px;
+}
+
+#offerings > h3 {
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
 
 .cards {
     display: flex;
@@ -95,6 +111,7 @@ section {
     margin:5px;
     height: 300px;
     width: 300px;
+    /* color: #5c913b; */
 }
 
 .card > .card-title {
@@ -108,9 +125,22 @@ section {
     font-size: 2rem;
 }
 
+form {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    width: 40%;
+}
+
+form > input {
+    margin: .25rem;
+    width: 100%;
+    height: 3rem;
+}
+
 .page-button {
-    background-color: white;
-    color: #5c913b;
+    background-color: #5c913b;
+    color: white;
     padding: 6px;
 }
 
@@ -143,6 +173,10 @@ section {
 
     .card {
         margin-top: 50px;
+    }
+
+    form {
+        width: 80%;
     }
   }
   
