--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h3 {
     letter-spacing: 2px;
 }
 
+input {
+    border-style: solid;
+}
+
 li {
     list-style: none;
 }
@@ -102,15 +106,18 @@ h2 {
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 5px;
-    width: 80%;
+    width: 90%;
 }
 
 .card {
+    display: flex;
+    flex-flow: column wrap;
     background-color: #88c9f9;
-    border: 4px solid #5c913b;
-    margin:5px;
-    height: 300px;
-    width: 300px;
+    border: 5px solid #5c913b;
+    margin: 5px;
+    height: 400px;
+    width: 400px;
+    /* font-size: 1.2rem; */
     /* color: #5c913b; */
 }
 
@@ -124,6 +131,25 @@ h2 {
     font-weight: 900;
     font-size: 2rem;
 }
+
+.card > ul {
+    /* flex-grow: 1; */
+    padding: 1rem;
+    text-align:left;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+/* .card > .pricing {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    text-align: center;
+    height: 35px;
+    background-color: #5c913b;
+} */
+
 
 form {
     display: flex;
@@ -142,17 +168,37 @@ form > input {
     background-color: #5c913b;
     color: white;
     padding: 6px;
+    cursor: pointer;
 }
 
 .rounded-border {
     border-radius: 15px;
 }
 
-
 .smaller-image {
     width: 75px;
 }
 
+.fas {
+    padding: 2px;
+}
+
+.fa-check {
+    color: #5c913b;
+}
+
+.fa-times {
+    color: red;
+}
+
+.subtext {
+    font-size: 15px;
+}
+
+.price-text {
+    font-size: 25px;
+    font-weight: 900;
+}
 
 
 /* CSS TRICKS */
@@ -177,6 +223,10 @@ form > input {
 
     form {
         width: 80%;
+    }
+
+    iframe {
+        width: 100%;
     }
   }
   
