--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h2 {
     border: 5px solid #5c913b;
     margin: 5px;
     height: 400px;
-    width: 400px;
+    width: 350px;
     /* font-size: 1.2rem; */
     /* color: #5c913b; */
 }
@@ -133,7 +133,7 @@ h2 {
 }
 
 .card > ul {
-    /* flex-grow: 1; */
+    flex-grow: 1;
     padding: 1rem;
     text-align:left;
     font-weight: 600;
