--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ h2 {
     font-size: 20px;
 }
 
-/* .card > .pricing {
+.card > .pricing {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -148,7 +148,7 @@ h2 {
     text-align: center;
     height: 35px;
     background-color: #5c913b;
-} */
+}
 
 
 form {
