--- a/style.css
+++ b/style.css
@@ -122,17 +122,23 @@ h2 {
 }
 
 .card > .card-title {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-grow: 1;
     background-color: #5c913b;
     width: 100%;
-    height: calc(100% / 4);
     color: white;
-    padding: 15px;
+    padding: 7px;
     text-align: center;
     font-weight: 900;
     font-size: 2rem;
 }
 
 .card > ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
     flex-grow: 1;
     padding: 1rem;
     text-align:left;
@@ -142,14 +148,13 @@ h2 {
 
 .card > .pricing {
     display: flex;
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
     width: 100%;
     text-align: center;
-    height: 35px;
     background-color: #5c913b;
 }
-
 
 form {
     display: flex;
@@ -160,6 +165,7 @@ form {
 
 form > input {
     margin: .25rem;
+    padding: .55rem;
     width: 100%;
     height: 3rem;
 }
