update header and remove sticky footer

--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
 
 #header {
     /* Need position: fixed; for FCC */
-    /* position: fixed;  */
-    /* z-index:1; */
+    position: fixed; 
+    z-index:1;
     display: flex;
     flex: 0 0 auto;
     flex-flow: row wrap;
@@ -38,9 +38,9 @@ body {
 
 main {
     /* Need margin-top: 90px; for FCC */
-    /* margin-top: 90px; */
+    margin-top: 90px;
     /* flex: 1 1 auto; this option makes a sticky footer */
-    flex: 1 1 auto;
+    flex: 1 0 auto;
     overflow-y: auto;
     position: relative;
 }
@@ -76,7 +76,7 @@ h3 {
 
 .intro-h1 {
     padding-top: .5rem;
-    background-color: #5c913b;
+    /* background-color: #5c913b; */
     font-size: 2.5rem;
     text-shadow: 3px 3px 2px midnightblue;
 }
@@ -84,6 +84,7 @@ h3 {
 .intro-p {
     padding-bottom: .5rem;
     background-color: #5c913b;
+    border-top: 5px solid #88c9f9;
     border-bottom: 5px solid #88c9f9;
     font-size: 1.5rem;
     text-align: center;
