--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h3 {
 
 .intro-h1 {
     padding-top: .5rem;
+    padding-bottom: .2rem;
     /* background-color: #5c913b; */
     font-size: 2.5rem;
     text-shadow: 3px 3px 2px midnightblue;
